<resources>
    <string name="app_name">Intprices</string>

    <!--ADMOB-->
    <string name="banner_native_medium_ad_unit_id" translatable="false">ca-app-pub-6747456021911221/1134162798</string>
    <string name="full_banner_ad_unit_id" translatable="false">ca-app-pub-6747456021911221/6573892390</string>

    <!--OTHER-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_deals">Deals</string>
    <string name="validation_query_required">Query is required</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_deals">Deals</string>
    <string name="freeShipping">Free shipping</string>
    <string name="search_internal_error">Internal error</string>
    <string name="search_result_empty">Products were not be found. Try another query</string>
    <string name="form_btn_search">Search</string>
    <string name="form_label_price">Price</string>
    <string name="item_condition">Condition</string>
    <string name="item_time_left">Time left</string>
    <string name="item_buy_it_now">Buy it now</string>
    <string name="item_price">Price</string>
    <string name="item_bids">Bids</string>
    <!-- <string name="item_old_price">old price</string> -->
    <string name="item_availability">Availability</string>
    <string name="item_new">new</string>
    <string name="item_count_offers">%d offers</string>
    <string name="item_used">used</string>
    <string name="item_refurbished">refurbished</string>
    <string name="item_collectible">collectible</string>
    <string name="form_category_placeholder">--All categories--</string>
    <string name="form_country_placeholder">--All countries--</string>
    <string name="form_type_placeholder">--All types--</string>
    <string name="form_condition_placeholder">--All conditions--</string>
    <string name="form_free_shipping">Free shipping</string>
    <string name="item_time_left_expired">Expired</string>
    <string name="item_shop">Shop</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="no_internet">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="seatch_filter">Search filter</string>
    <string name="shipping_type">Shipping type</string>
    <string name="listing_type">Listing type</string>
    <string name="best_offered">Best offered</string>
    <string name="end_date">End date</string>
    <string name="current_date">Current date</string>
    <string name="shipping_cost">Shipping coast</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="total_new">Total new</string>
    <string name="sort_by">Sort by: </string>
    <string name="shipping_to">Shipping to</string>
    <string name="about_content">
        <![CDATA[
            <p>Version: %1$s</p>
            <p>Web site: <a href="http://www.intprices.com">www.intprices.com</a></p>
        ]]>
    </string>
    <string name="search_hint">Search query</string>
    <string name="overview">Search in Ebay, Amazon and Aliexpress</string>

</resources>
