<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbstractToolbarActivity">

 <include layout="@layout/app_bar_layout"/>

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize"
            android:padding="@dimen/small_padding">

            <ViewStub
                android:id="@+id/drawer_viewstub"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navigationview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?actionBarSize">

                <ProgressBar
                    android:id="@+id/drawer_filter_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <ImageButton
                    android:id="@+id/drawer_filter_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:src="@drawable/replay"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/drawer_filter_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <Spinner
                        android:id="@+id/drawer_filter_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:spinnerMode="dropdown"
                        android:tag="category" />

                    <EditText
                        android:id="@+id/drawer_filter_form_query"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_hint"
                        android:textColorHint="@color/lightgray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="@dimen/small_padding"
                            android:gravity="center_vertical"
                            android:text="@string/item_price"
                            android:textColor="@color/lightgray"
                            android:textSize="@dimen/text_medium" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/drawer_filter_edit_from_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:hint="$"
                                android:inputType="number" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/medium_padding"
                                android:paddingRight="@dimen/medium_padding"
                                android:text="-" />

                            <EditText
                                android:id="@+id/drawer_filter_price_to"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:hint="$"
                                android:inputType="number" />
                        </LinearLayout>
                    </LinearLayout>

                    <Spinner
                        android:id="@+id/drawer_filter_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:tag="country" />

                    <Spinner
                        android:id="@+id/drawer_filter_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:tag="type" />

                    <Spinner
                        android:id="@+id/drawer_filter_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:tag="condition" />

                    <Spinner
                        android:id="@+id/drawer_filter_sort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:tag="sort" />

                    <CheckBox
                        android:id="@+id/drawer_filter_checkbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/freeShipping"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/lightgray" />
                    <Button
                        android:id="@+id/drawer_filter_search_btn"
                        style="@style/SearchButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/form_btn_search" />
                </LinearLayout>
            </FrameLayout>
        </android.support.design.widget.NavigationView>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>